k8s/users-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: mv7moud/ecommerce-users-service:52907d4f9dd61cb5ddec29f5f58db89fcb9f3a54
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: ecommerce
spec:
  selector:
    app: users-service
  ports:
    - port: 3000
      targetPort: 3000
