k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 3000
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 3000
